# codebase-expert

./: README.md  Rag_enchangement_technical_spec.md  codebase_expert.py  codebase_expert_legacy_shim.py  pyproject.toml  requirements.txt
chunkers/: __init__.py  csharp_chunker.py  factory.py  fallback_chunker.py  javascript_chunker.py
rag_components/: __init__.py  knowledge_base.py  retriever.py
src/codebase_expert/: __init__.py  cli.py  codebase_expert_core.py  main.py
src/codebase_expert/chunkers/: base.py  java_chunker.py  python_chunker.py  sql_chunker.py
src/codebase_expert/rag_components/: context_assembler.py  embedding_manager.py
