# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "codebase-expert"
version = "1.1.0"
description = "Enhanced Codebase Expert - Universal tool for codebase knowledge with AST chunking and RAG"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Codebase Expert Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    # Core dependencies
    "memvid",
    "mcp==1.9.2",
    "pydantic>=2.0.0",
    "starlette>=0.47.0",
    "uvicorn>=0.34.0",
    "watchdog",
    "requests",
]

# This creates the `codebase-expert` command line tool
[project.scripts]
codebase-expert = "codebase_expert.cli:app"

# Optional dependencies 
[project.optional-dependencies]
full = [
    # AST chunking dependencies  
    "tree-sitter>=0.20.0",
    "tree-sitter-languages",
    # Enhanced RAG dependencies
    "sentence-transformers",
    "transformers",
    "torch",
    "faiss-cpu",
    "rank-bm25",
    "networkx",
]
dev = [
    "pytest",
    "ruff",
    "black",
]

[project.urls]
Homepage = "https://github.com/darit/codebase-expert"
Repository = "https://github.com/darit/codebase-expert.git"
Issues = "https://github.com/darit/codebase-expert/issues"